; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath6kl/extr_htc_pipe.c_restore_tx_packet.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath6kl/extr_htc_pipe.c_restore_tx_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.htc_packet = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@HTC_FLAGS_TX_FIXUP_NETBUF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.htc_packet*)* @restore_tx_packet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @restore_tx_packet(%struct.htc_packet* %0) #0 {
  %2 = alloca %struct.htc_packet*, align 8
  store %struct.htc_packet* %0, %struct.htc_packet** %2, align 8
  %3 = load %struct.htc_packet*, %struct.htc_packet** %2, align 8
  %4 = getelementptr inbounds %struct.htc_packet, %struct.htc_packet* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @HTC_FLAGS_TX_FIXUP_NETBUF, align 4
  %9 = and i32 %7, %8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %24

11:                                               ; preds = %1
  %12 = load %struct.htc_packet*, %struct.htc_packet** %2, align 8
  %13 = getelementptr inbounds %struct.htc_packet, %struct.htc_packet* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @skb_pull(i32 %14, i32 4)
  %16 = load i32, i32* @HTC_FLAGS_TX_FIXUP_NETBUF, align 4
  %17 = xor i32 %16, -1
  %18 = load %struct.htc_packet*, %struct.htc_packet** %2, align 8
  %19 = getelementptr inbounds %struct.htc_packet, %struct.htc_packet* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = and i32 %22, %17
  store i32 %23, i32* %21, align 4
  br label %24

24:                                               ; preds = %11, %1
  ret void
}

declare dso_local i32 @skb_pull(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
